[project]
name = "scheduler"
version = "0.1.0"
readme = "README.md"
description = "Indicates which taskwarrior's task should be done, considering time spent on other tasks"
authors = [
    {name = "Flávio Tapajós",email = "tapajos@outlook.com"}
]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.13"
dependencies = [
    "tasklib (>=2.5.1,<3.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)"
]

[tool.poetry.scripts]
next = "scheduler.main:app"
next-stats = "scheduler.stats:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
